--- a/style.css
+++ b/style.css
@@ -176,4 +176,124 @@ div#board {
     div#board .player2pieces .piece.selected {
       box-shadow: 0 0 10px 5px #16A8C7; }
 
+.homepageBlock{
+  width: 70%;
+  margin: 13vmin auto 0;
+  box-sizing: border-box;
+  padding: 20px 30px;
+  background-color: #F1F1FF;
+  color: #3A3042;
+  border-radius: 3px;
+  box-shadow: 1px 1px 3px #232621;
+  display: flex;
+  flex-direction: row;
+}
+
+.container0{
+  text-align: center;
+  width: 60%;
+  padding: 30px;
+  border-radius: 30px;
+  /* margin-top: 6%;
+  margin-right: 30%;
+  margin-left: 30%; */
+  width: 460px;
+  height: 360px;
+}
+.container1 {
+  padding: 30px;
+  border: 3px solid white;
+  border-radius: 30px;
+  background-color: white;
+  /* margin-top: 6%;
+  margin-right: 30%;
+  margin-left: 30%; */
+  width: 460px;
+  height: 360px;
+}
+
+.button {
+  font-size: 20px;
+  color: black;
+  background-color: #D4D2D5;
+  border: 3px solid black;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.row {
+  padding: 10px;
+  max-width: 1100px;
+  max-height: 500px;
+  align-items: center;
+}
+
+.col {
+  border: 3px solid #AA968A;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+
+  overflow: hidden;
+  justify-content: center;
+}
+.card{
+  margin: 10px;
+  padding: 10px;
+  width: 250px;
+  height: 325px;
+  align-self: center;
+}
+.clothingImage{
+  width: 75%;
+  align-self: center;
+  justify-content: center;
+}
+h4{
+  margin-top: 0.5rem;
+  margin-bottom: 0.15rem;
+  font-weight: 500;
+}
+.col1 {
+  margin: 10px 10px 10px 0px;
+  font-size: 20px;
+  padding: 5px;
+  border: 3px solid black;
+  border-radius: 5px;
+}
+
+#loginFooter {
+  text-align: center;
+}
+.wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  
+}
+.wrapper > div{
+  background-color: #3A3042;
+  width: 100px;
+  height: 100px;
+  padding: 2px;
+  border-radius: 5px;
+  margin: 5px;
+  
+}
+ .wrapper a{
+  color: white;
+}
+.containerSignup {
+  padding: 30px;
+  border: 3px solid white;
+  border-radius: 30px;
+  background-color: white;
+  margin-top: 6%;
+  margin-right: 30%;
+  margin-left: 30%;
+  width: 460px;
+  height: 360px;
+}
+
 /*# sourceMappingURL=style.css.map */
