--- a/style.css
+++ b/style.css
@@ -442,6 +442,8 @@ h4{
   border-radius: 5px;
   margin: 10px;
 }
+
+
 .titleText{
   color: #b93848;
   text-align: center;
@@ -466,4 +468,7 @@ h4{
   text-align: left;
   font-size: 12px;
   margin: 10px 30px 10px 30px;
+}
+#settings {
+  display:none;
 }
